--- a/src/main/resources/static/css/admin/works-save.css
+++ b/src/main/resources/static/css/admin/works-save.css
@@ -1,4 +1,4 @@
-.admin-home-image-btn {
+.admin-work-btn {
     background-color: rgb(225, 233, 249);
     color: #0273e6;
     font-weight: 500;
@@ -14,8 +14,8 @@
     display: flex;
     flex-direction: column;
     width: calc(100% - 20px);
-    margin-bottom: 15px;
     margin-top: 10px;
+    margin-bottom: 15px;
 }
 
 .home-image-save-file {
