--- a/src/main/resources/templates/admin/work/save.html
+++ b/src/main/resources/templates/admin/work/save.html
@@ -1,125 +1,36 @@
-<!DOCTYPE HTML>
-<html xmlns:th="http://www.thymeleaf.org">
+<!DOCTYPE html>
+<html lang="ko"
+      xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorate="~{layouts/admin-default}">
 <head>
-  <title>CHOIMYEONGHEON</title>
-  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <!-- Bootstrap CSS -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/css/bootstrap-datepicker.min.css"
-        integrity="sha512-mSYUmp1HYZDFaVKK//63EcZq4iFWFjxSL+Z3T/aCt4IO9Cejm03q3NKKYN6pFQzY0SBOr8h+eCIAZHPXcpZaNw=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <link rel="stylesheet" th:href="@{/css/bootstrap.css}">
+  <link rel="stylesheet" href="/css/admin/works-save.css" />
+  <script src="/js/works-save.js" defer></script>
 </head>
-<body>
-
-<div>
-  <div th:replace="~{fragments/nav.html :: navFrament}" />
-</div>
-
-<div class="home-image-save-container">
-  <div class="home-image-save-wrapper">
-    <div class="left-nav">
-      <ul class="nav nav-pills flex-column">
-        <li class="nav-item">
-          <a class="nav-link" href="/admin/home-images">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link active" href="/admin/works">Works</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/admin/profile">Profile</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/admin/contact">Contact</a>
-        </li>
-      </ul>
-    </div>
-    <div class="home-image-right-wrapper">
-      <div class="home-image-saved-list">
-        <h5>현재 저장된 이미지</h5>
-      </div>
+<div layout:fragment="admin-content">
+  <form th:action="@{/admin/works}" th:object="${request}" method="post" enctype="multipart/form-data" class="home-image-form">
+    <div class="home-image-save-container">
       <div class="home-image-save-form">
-        <form th:action="@{/admin/works}" th:object="${request}" method="post" enctype="multipart/form-data" class="home-image-form validation-form" novalidate>
-          <div class="home-image-save-input">
-            <div class="form-group">
-              <div class="form-home-image">
-                <label for="formFile" class="form-label mt-4">Work 로 저장할 파일</label>
-                <input class="form-control" type="file" id="formFile" accept="image/*" th:field="*{work}" required>
-                <div class="invalid-feedback">
-                  Please select the home-image
-                </div>
-              </div>
-              <div class="form-home-image-title">
-                <label class="form-label mt-4">Title</label>
-                <input type="text" th:field="*{title}" class="form-control" placeholder="Title" required>
-                <div class="invalid-feedback">
-                  Please write the title
-                </div>
-              </div>
-              <div>
-                <label class="form-label mt-4">Work Date</label>
-                <input type="text" id="date-picker" class="form-control" aria-label="Search" aria-describedby="basic-addon2" th:field="*{workDate}" required>
-                <div class="invalid-feedback">
-                  Please select the Work Date
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="home-image-save-btn-wrapper">
-            <div class="home-image-save">
-              <a class="btn btn-secondary" href="/admin/works">이전</a>
-            </div>
-            <div class="home-image-delete">
-              <button type="submit" class="btn btn-success home-image-save-btn">저장</button>
-            </div>
-          </div>
-        </form>
+        <span class="input-label">이미지</span>
+        <div class="home-image-save-file">
+          <span class="home-image-file-name" id="home-image-file-name">파일명</span>
+          <input id="home-image-file" class="form-control" type="file" accept="image/*" th:field="*{work}">
+          <label for="home-image-file" class="home-image-file-label"><i class="fa-solid fa-upload"></i></label>
+        </div>
+      </div>
+      <div class="home-image-save-title home-image-save-form">
+        <label for="home-image-title" class="input-label">제목</label>
+        <input id="home-image-title" type="text" th:field="*{title}" class="form-control" placeholder="Title">
+      </div>
+      <div class="home-image-save-work-date home-image-save-form">
+        <label for="work-date" class="input-label">작업일자</label>
+        <input id="work-date" type="date" class="form-control" th:field="*{workDate}">
+      </div>
+      <div class="home-image-save-btn-wrapper">
+        <a class="before-btn" href="/admin/works">이전</a>
+        <button type="submit" class="home-image-save-btn">저장</button>
       </div>
     </div>
-  </div>
+  </form>
 </div>
-
-<div class="home-footer">ALL IMAGES AND SITE CONTENT © CHOI MYEONGHEON</div>
-
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/js/bootstrap-datepicker.min.js"
-        integrity="sha512-T/tUfKSV1bihCnd+MxKD0Hm1uBBroVYBOYSk1knyvQ9VyZJpc/ALb4P0r6ubwVPSGB2GvjeoMAJJImBG12TiaQ=="
-        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/locales/bootstrap-datepicker.ko.min.js"
-        integrity="sha512-L4qpL1ZotXZLLe8Oo0ZyHrj/SweV7CieswUODAAPN/tnqN3PA1P+4qPu5vIryNor6HQ5o22NujIcAZIfyVXwbQ=="
-        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-<script>
-  window.addEventListener('load', () => {
-    const forms = document.getElementsByClassName('validation-form');
-
-    Array.prototype.filter.call(forms, (form) => {
-      form.addEventListener('submit', function (event) {
-        if (form.checkValidity() === false) {
-          event.preventDefault();
-          event.stopPropagation();
-        }
-
-        form.classList.add('was-validated');
-      }, false);
-    });
-  }, false);
-
-  document.querySelector('#date-picker').value = new Date().toISOString().slice(0, 7);
-
-  $(document).ready(function() {
-    $('#date-picker').datepicker({
-      format: "yyyy-mm",
-      minViewMode: 1,
-      language: "ko",
-      autoclose: true
-    })
-
-    $('#get-history').on('click', function() {
-      const dateArr = $('#date-picker').val().split('-')
-      location.href = '/history?year=' + dateArr[0] + '&month=' + dateArr[1]
-    })
-  })
-</script>
-<script src="/js/bootstrap.bundle.js"></script>
-</body>
 </html>
