--- a/src/main/resources/templates/fragments/admin-navbar.html
+++ b/src/main/resources/templates/fragments/admin-navbar.html
@@ -5,7 +5,7 @@
 <div class="admin-container" th:fragment="admin-navbar">
   <div class="admin-navbar">
     <a href="/admin/home-images" class="admin-home-image-btn">Home</a>
-    <a href="#none">Works</a>
+    <a href="/admin/works" class="admin-work-btn">Works</a>
     <a href="#none">Biography</a>
     <a href="#none">Contact</a>
   </div>
