[feat] : FE - works, works-delete 화면 select box 로 get 요청 보내도록 구현 및 dto 수정

--- a/src/main/resources/static/css/admin/works.css
+++ b/src/main/resources/static/css/admin/works.css
@@ -164,7 +164,7 @@ div.minimalistBlack {
 select::-ms-expand {
     display: none;
 }
-.work-date-select {
+.work-year-select {
     -o-appearance: none;
     -webkit-appearance: none;
     -moz-appearance: none;
@@ -179,7 +179,7 @@ select::-ms-expand {
     margin-top: 10px;
     margin-left: 20px;
 }
-.work-date-select option {
+.work-year-select option {
     background: black;
     color: #fff;
     padding: 3px 0;
