--- a/src/main/resources/templates/admin/homeImage/save.html
+++ b/src/main/resources/templates/admin/homeImage/save.html
@@ -5,7 +5,7 @@
       layout:decorate="~{layouts/admin-default}">
 <head>
   <link rel="stylesheet" href="/css/admin/homeImages-save.css" />
-  <script src="/js/homeImages-save.js" defer></script>
+  <script src="/js/common.js" defer></script>
 </head>
 <div layout:fragment="admin-content">
   <form th:action="@{/admin/home-images}" th:object="${request}" method="post" enctype="multipart/form-data" class="home-image-form">
