--- a/src/main/resources/templates/admin/work/delete.html
+++ b/src/main/resources/templates/admin/work/delete.html
@@ -1,119 +1,51 @@
-<!DOCTYPE HTML>
-<html xmlns:th="http://www.thymeleaf.org">
-<head th:replace="~{fragments/header.html :: header}">
-    <title>Hello</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+<!DOCTYPE html>
+<html   lang="ko"
+        xmlns:th="http://www.thymeleaf.org"
+        xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+        layout:decorate="~{layouts/admin-default}">
+<head>
+    <link rel="stylesheet" href="/css/admin/works.css" />
+    <script src="/js/common.js" defer></script>
+    <script src="/js/works.js" defer></script>
 </head>
-<body>
-
-<div>
-    <div th:replace="~{fragments/nav.html :: navFrament}" />
-</div>
-
-<div class="admin-container">
-    <div class="admin-wrapper">
-        <div class="left-nav">
-            <ul class="nav nav-pills flex-column">
-                <li class="nav-item">
-                    <a class="nav-link" href="/admin/home-images">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link active" href="/admin/works">Works</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/admin/profile">Profile</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/admin/contact">Contact</a>
-                </li>
-            </ul>
+<div layout:fragment="admin-content">
+    <form th:action="@{/admin/works}" th:object="${request}" th:method="delete" onsubmit="return deleteHandler()">
+        <div class="home-image-content-header">
+            <!-- <h3>현재 저장된 홈 이미지 (1)</h3> -->
+            <a class="before-btn" href="/admin/works">이전</a>
+            <button type="submit" class="home-image-content-header-del-btn">삭제</button>
+            <select name="workDate" class="work-year-select" id="work-year-select" onchange="sendDeleteFormRequest()">
+                <option th:selected="All == ${workYear}" value="All">All</option>
+                <option th:each="wy : ${workYears}" th:text="${wy.year}" th:selected="${workYear} == ${wy.year}" th:value="${wy.year}">2018</option>
+            </select>
         </div>
-        <div class="home-image-wrapper">
-            <form th:action="@{/admin/works}" th:object="${request}" method="#" th:method="delete" onsubmit="return deleteHandler()" style="height: 100%">
-                <div class="home-image-table">
-                    <ul class="nav nav-tabs" role="tablist">
-                        <li class="nav-item" role="presentation">
-                            <a class="nav-link active" data-bs-toggle="tab" href="#all" aria-selected="true" role="tab">ALL</a>
-                        </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" id="work-year" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Years</a>
-                            <ul class="dropdown-menu">
-                                <li role="presentation" th:each="workYear : ${workYears}" style="text-align: center">
-                                    <a class="dropdown-item" data-bs-toggle="tab" th:href="'#' + ${workYear.year}" th:text="${workYear.year}" aria-selected="false" role="tab" tabindex="-1" onclick="dropDownHandler(this)">2018</a>
-                                </li>
-                            </ul>
-                        </li>
-                    </ul>
-                    <div class="tab-content">
-                        <div class="tab-pane fade show active" id="all" role="tabpanel">
-                            <table class="table table-hover">
-                                <thead>
-                                <tr class="table-dark">
-                                    <th></th>
-                                    <th scope="col">Image</th>
-                                    <th scope="col">Title</th>
-                                    <th scope="col">WorkDate</th>
-                                </tr>
-                                </thead>
-                                <tbody>
-                                <tr class="table-light" th:each="work, itemStat : *{workDeleteDtoList}">
-                                    <th><input type="checkbox" th:field="*{workDeleteDtoList[__${itemStat.index}__].isDeleted}" class="form-check-input"></th>
-                                    <td><img th:src="'/admin/works/display?fileName='+${work.fileName}" class="img-fluid" style="width: 6rem"></td>
-                                    <td th:text="${work.title}"></td>
-                                    <td th:text="${work.workDate}"></td>
-                                    <td style="display: none"><input type="hidden" th:field="*{workDeleteDtoList[__${itemStat.index}__].id}"></td>
-                                </tr>
-                                </tbody>
-                            </table>
-                        </div>
-                        <div class="tab-pane fade" id="2018" role="tabpanel" th:each="workYear : ${workYears}" th:id="${workYear.year}">
-                            <table class="table table-hover">
-                                <thead>
-                                <tr class="table-dark">
-                                    <th></th>
-                                    <th scope="col">Image</th>
-                                    <th scope="col">Title</th>
-                                    <th scope="col">WorkDate</th>
-                                </tr>
-                                </thead>
-                                <tbody>
-                                <tr class="table-light" th:each="work, itemStat : *{workDeleteDtoList}" th:if="${work.getWorkDate().getYear() == workYear.year}">
-                                    <th><input type="checkbox" th:field="*{workDeleteDtoList[__${itemStat.index}__].isDeleted}" class="form-check-input"></th>
-                                    <td><img th:src="'/admin/home-images/display?fileName='+${work.fileName}" class="img-fluid" style="width: 6rem"></td>
-                                    <td th:text="${work.title}"></td>
-                                    <td th:text="${work.workDate}"></td>
-                                    <td style="display: none"><input type="hidden" th:field="*{workDeleteDtoList[__${itemStat.index}__].id}"></td>
-                                </tr>
-                                </tbody>
-                            </table>
-                        </div>
-                    </div>
+        <div class="divTable minimalistBlack">
+            <div class="divTableHeading">
+                <div class="divTableRow">
+                    <div class="divTableHead del-chk-header"><input type="checkbox" /></div>
+                    <div class="divTableHead home-image-header">이미지</div>
+                    <div class="divTableHead home-image-title-header">제목</div>
+                    <div class="divTableHead home-image-work-date-header">작업일자</div>
+                    <div class="divTableHead home-image-reg-date-header">등록일자</div>
+                    <div class="divTableHead home-image-file-name-header">파일명</div>
                 </div>
-                <div class="home-image-button-wrapper">
-                    <div class="home-image-save">
-                        <a class="btn btn-secondary" href="/admin/works">이전</a>
-                    </div>
-                    <div class="home-image-delete">
-                        <button type="submit" class="btn btn-danger">삭제</button>
-                    </div>
+            </div>
+            <div class="divTableBody">
+                <div class="divTableRow" th:each="work, itemStat : *{workDeleteDtoList}">
+                    <div class="divTableCell del-chk"><input type="checkbox" th:field="*{workDeleteDtoList[__${itemStat.index}__].isDeleted}"></div>
+                    <div class="divTableCell home-image"><img th:src="'/admin/home-images/display?fileName='+${work.fileName}" /></div>
+                    <div class="divTableCell home-image-title" th:text="${work.title}"></div>
+                    <div class="divTableCell home-image-reg-date" th:text="${work.workDate}"></div>
+                    <div class="divTableCell home-image-reg-date" th:text="${work.regDate}"></div>
+                    <div class="divTableCell home-image-file-name" th:text="${work.originName}"></div>
+                    <input type="hidden" th:field="*{workDeleteDtoList[__${itemStat.index}__].id}">
+                    <input type="hidden" th:field="*{workDeleteDtoList[__${itemStat.index}__].fileName}">
+                    <input type="hidden" th:field="*{workDeleteDtoList[__${itemStat.index}__].originName}">
+                    <input type="hidden" th:field="*{workDeleteDtoList[__${itemStat.index}__].title}">
+                    <input type="hidden" th:field="*{workDeleteDtoList[__${itemStat.index}__].regDate}">
                 </div>
-            </form>
+            </div>
         </div>
-    </div>
+    </form>
 </div>
-
-<div class="home-footer">ALL IMAGES AND SITE CONTENT © CHOI MYEONGHEON</div>
-
-<script src="/js/bootstrap.bundle.js"></script>
-<script>
-    function deleteHandler() {
-        if(confirm("선택한 이미지를 삭제하시겠습니까?")) {
-            return true;
-        }
-        else {
-            return false;
-        }
-    }
-</script>
-</body>
 </html>
