--- a/src/main/resources/templates/admin/work/works.html
+++ b/src/main/resources/templates/admin/work/works.html
@@ -5,15 +5,16 @@
         layout:decorate="~{layouts/admin-default}">
 <head>
   <link rel="stylesheet" href="/css/admin/works.css" />
+  <script src="/js/works.js" defer></script>
 </head>
 <div layout:fragment="admin-content">
   <div class="home-image-content-header">
     <!-- <h3>현재 저장된 홈 이미지 (1)</h3> -->
     <a href="/admin/works/save-form" class="home-image-content-header-save-btn">저장</a>
-    <a href="/admin/home-images/delete-form" class="home-image-content-header-del-btn">삭제</a>
-    <select name="workDate" class="work-date-select">
-      <option selected>All</option>
-      <option th:each="workYear : ${workYears}" th:text="${workYear.year}">2018</option>
+    <a href="/admin/works/delete-form" class="home-image-content-header-del-btn">삭제</a>
+    <select name="workDate" class="work-year-select" id="work-year-select" onchange="sendGetRequest()">
+      <option th:selected="All == ${workYear}" value="All">All</option>
+      <option th:each="wy : ${workYears}" th:text="${wy.year}" th:selected="${workYear} == ${wy.year}" th:value="${wy.year}">2018</option>
     </select>
   </div>
   <div class="divTable minimalistBlack">
