--- a/src/main/resources/templates/fragments/admin-navbar.html
+++ b/src/main/resources/templates/fragments/admin-navbar.html
@@ -6,7 +6,7 @@
   <div class="admin-navbar">
     <a href="/admin/home-images" class="admin-home-image-btn">Home</a>
     <a href="/admin/works" class="admin-work-btn">Works</a>
-    <a href="#none">Biography</a>
+    <a href="/admin/profile/all" class="admin-profile-btn">Biography</a>
     <a href="#none">Contact</a>
   </div>
   <div class="admin-content">
