--- a/src/main/resources/templates/layouts/admin-default.html
+++ b/src/main/resources/templates/layouts/admin-default.html
@@ -10,7 +10,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Source+Sans+3:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="/css/reset.css" />
   <link rel="stylesheet" href="/css/navbar.css" />
-  <link rel="stylesheet" href="/css/admin/admin-navbar.css" />
+  <link rel="stylesheet" href="/css/admin/navbar.css" />
   <title>CHOIMYEONGHEON</title>
   <script src="https://kit.fontawesome.com/dde5d5c538.js" crossorigin="anonymous"></script>
   <script src="/js/navbar.js" defer></script>
