--- a/src/main/resources/templates/admin/homeImage/delete.html
+++ b/src/main/resources/templates/admin/homeImage/delete.html
@@ -4,15 +4,16 @@
         xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
         layout:decorate="~{layouts/admin-default}">
 <head>
-  <link rel="stylesheet" href="/css/admin/homeImages.css" />
+  <link rel="stylesheet" href="/css/admin/common.css" />
+  <link rel="stylesheet" href="/css/admin/homeImage/homeImages.css" />
   <script src="/js/common.js" defer></script>
 </head>
 <div layout:fragment="admin-content">
   <form th:action="@{/admin/home-images}" th:object="${request}" th:method="delete" onsubmit="return deleteHandler()">
-    <div class="home-image-content-header">
+    <div class="admin-content-header">
       <!-- <h3>현재 저장된 홈 이미지 (1)</h3> -->
       <a class="before-btn" href="/admin/home-images">이전</a>
-      <button type="submit" class="home-image-content-header-del-btn">삭제</button>
+      <button type="submit" class="admin-content-header-del-btn">삭제</button>
     </div>
     <div class="divTable minimalistBlack">
       <div class="divTableHeading">
