--- a/src/main/resources/templates/admin/homeImage/homeImages.html
+++ b/src/main/resources/templates/admin/homeImage/homeImages.html
@@ -4,13 +4,14 @@
         xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
         layout:decorate="~{layouts/admin-default}">
 <head>
-    <link rel="stylesheet" href="/css/admin/homeImages.css" />
+    <link rel="stylesheet" href="/css/admin/common.css" />
+    <link rel="stylesheet" href="/css/admin/homeImage/homeImages.css" />
 </head>
 <div layout:fragment="admin-content">
-    <div class="home-image-content-header">
+    <div class="admin-content-header">
         <!-- <h3>현재 저장된 홈 이미지 (1)</h3> -->
-        <a href="/admin/home-images/save-form" class="home-image-content-header-save-btn">저장</a>
-        <a href="/admin/home-images/delete-form" class="home-image-content-header-del-btn">삭제</a>
+        <a href="/admin/home-images/save-form" class="admin-content-header-save-btn">저장</a>
+        <a href="/admin/home-images/delete-form" class="admin-content-header-del-btn">삭제</a>
     </div>
     <div class="divTable minimalistBlack">
         <div class="divTableHeading">
