--- a/src/main/resources/templates/admin/work/delete.html
+++ b/src/main/resources/templates/admin/work/delete.html
@@ -4,17 +4,18 @@
         xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
         layout:decorate="~{layouts/admin-default}">
 <head>
-    <link rel="stylesheet" href="/css/admin/works.css" />
+    <link rel="stylesheet" href="/css/admin/common.css" />
+    <link rel="stylesheet" href="/css/admin/work/works.css" />
     <script src="/js/common.js" defer></script>
     <script src="/js/works.js" defer></script>
 </head>
 <div layout:fragment="admin-content">
     <form th:action="@{/admin/works}" th:object="${request}" th:method="delete" onsubmit="return deleteHandler()">
-        <div class="home-image-content-header">
+        <div class="admin-content-header">
             <!-- <h3>현재 저장된 홈 이미지 (1)</h3> -->
             <a class="before-btn" href="/admin/works">이전</a>
-            <button type="submit" class="home-image-content-header-del-btn">삭제</button>
-            <select name="workDate" class="work-year-select" id="work-year-select" onchange="sendDeleteFormRequest()">
+            <button type="submit" class="admin-content-header-del-btn">삭제</button>
+            <select name="workDate" class="admin-content-header-select" id="work-year-select" onchange="sendDeleteFormRequest()">
                 <option th:selected="All == ${workYear}" value="All">All</option>
                 <option th:each="wy : ${workYears}" th:text="${wy.year}" th:selected="${workYear} == ${wy.year}" th:value="${wy.year}">2018</option>
             </select>
@@ -23,21 +24,21 @@
             <div class="divTableHeading">
                 <div class="divTableRow">
                     <div class="divTableHead del-chk-header"><input type="checkbox" /></div>
-                    <div class="divTableHead home-image-header">이미지</div>
-                    <div class="divTableHead home-image-title-header">제목</div>
-                    <div class="divTableHead home-image-work-date-header">작업일자</div>
-                    <div class="divTableHead home-image-reg-date-header">등록일자</div>
-                    <div class="divTableHead home-image-file-name-header">파일명</div>
+                    <div class="divTableHead work-header">이미지</div>
+                    <div class="divTableHead work-title-header">제목</div>
+                    <div class="divTableHead work-work-date-header">작업일자</div>
+                    <div class="divTableHead work-reg-date-header">등록일자</div>
+                    <div class="divTableHead work-file-name-header">파일명</div>
                 </div>
             </div>
             <div class="divTableBody">
                 <div class="divTableRow" th:each="work, itemStat : *{workDeleteDtoList}">
                     <div class="divTableCell del-chk"><input type="checkbox" th:field="*{workDeleteDtoList[__${itemStat.index}__].isDeleted}"></div>
-                    <div class="divTableCell home-image"><img th:src="'/admin/home-images/display?fileName='+${work.fileName}" /></div>
-                    <div class="divTableCell home-image-title" th:text="${work.title}"></div>
-                    <div class="divTableCell home-image-reg-date" th:text="${work.workDate}"></div>
-                    <div class="divTableCell home-image-reg-date" th:text="${work.regDate}"></div>
-                    <div class="divTableCell home-image-file-name" th:text="${work.originName}"></div>
+                    <div class="divTableCell work"><img th:src="'/admin/home-images/display?fileName='+${work.fileName}" /></div>
+                    <div class="divTableCell work-title" th:text="${work.title}"></div>
+                    <div class="divTableCell work-work-date" th:text="${work.workDate}"></div>
+                    <div class="divTableCell work-reg-date" th:text="${work.regDate}"></div>
+                    <div class="divTableCell work-file-name" th:text="${work.originName}"></div>
                     <input type="hidden" th:field="*{workDeleteDtoList[__${itemStat.index}__].id}">
                     <input type="hidden" th:field="*{workDeleteDtoList[__${itemStat.index}__].fileName}">
                     <input type="hidden" th:field="*{workDeleteDtoList[__${itemStat.index}__].originName}">
