--- a/src/main/resources/templates/admin/work/works.html
+++ b/src/main/resources/templates/admin/work/works.html
@@ -4,15 +4,16 @@
         xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
         layout:decorate="~{layouts/admin-default}">
 <head>
-  <link rel="stylesheet" href="/css/admin/works.css" />
+  <link rel="stylesheet" href="/css/admin/common.css" />
+  <link rel="stylesheet" href="/css/admin/work/works.css" />
   <script src="/js/works.js" defer></script>
 </head>
 <div layout:fragment="admin-content">
-  <div class="home-image-content-header">
+  <div class="admin-content-header">
     <!-- <h3>현재 저장된 홈 이미지 (1)</h3> -->
-    <a href="/admin/works/save-form" class="home-image-content-header-save-btn">저장</a>
-    <a href="/admin/works/delete-form" class="home-image-content-header-del-btn">삭제</a>
-    <select name="workDate" class="work-year-select" id="work-year-select" onchange="sendGetRequest()">
+    <a href="/admin/works/save-form" class="admin-content-header-save-btn">저장</a>
+    <a href="/admin/works/delete-form" class="admin-content-header-del-btn">삭제</a>
+    <select name="workDate" class="admin-content-header-select" id="work-year-select" onchange="sendGetRequest()">
       <option th:selected="All == ${workYear}" value="All">All</option>
       <option th:each="wy : ${workYears}" th:text="${wy.year}" th:selected="${workYear} == ${wy.year}" th:value="${wy.year}">2018</option>
     </select>
@@ -20,20 +21,20 @@
   <div class="divTable minimalistBlack">
     <div class="divTableHeading">
       <div class="divTableRow">
-        <div class="divTableHead home-image-header">이미지</div>
-        <div class="divTableHead home-image-title-header">제목</div>
-        <div class="divTableHead home-image-work-date-header">작업일자</div>
-        <div class="divTableHead home-image-reg-date-header">등록일자</div>
-        <div class="divTableHead home-image-file-name-header">파일명</div>
+        <div class="divTableHead work-header">이미지</div>
+        <div class="divTableHead work-title-header">제목</div>
+        <div class="divTableHead work-work-date-header">작업일자</div>
+        <div class="divTableHead work-reg-date-header">등록일자</div>
+        <div class="divTableHead work-file-name-header">파일명</div>
       </div>
     </div>
     <div class="divTableBody">
       <div class="divTableRow" th:each="work : ${works}">
-        <div class="divTableCell home-image"><img th:src="'/admin/home-images/display?fileName='+${work.fileName}" /></div>
-        <div class="divTableCell home-image-title" th:text="${work.title}"></div>
-        <div class="divTableCell home-image-work-date" th:text="${work.workDate}"></div>
-        <div class="divTableCell home-image-reg-date" th:text="${work.regDate}"></div>
-        <div class="divTableCell home-image-file-name" th:text="${work.originName}"></div>
+        <div class="divTableCell work"><img th:src="'/admin/home-images/display?fileName='+${work.fileName}" /></div>
+        <div class="divTableCell work-title" th:text="${work.title}"></div>
+        <div class="divTableCell work-work-date" th:text="${work.workDate}"></div>
+        <div class="divTableCell work-reg-date" th:text="${work.regDate}"></div>
+        <div class="divTableCell work-file-name" th:text="${work.originName}"></div>
       </div>
     </div>
   </div>
